some fixes comp_math:lab2_gui